--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ version = "0.1.0"
 [dependencies]
 anyhow = {version = "1.0.65", features = ["backtrace"]}
 clap = {version = "4.0.17", features = ["derive"]}
+dialoguer = {version = "0.10.2", default-features = false}
 figment = {version = "0.10.8", default-features = false, features = ["toml"]}
 serde = {version = "1.0.145", default-features = false, features = ["derive"]}
