--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = {version = "1.0.65", features = ["backtrace"]}
+atty = "0.2.14"
 clap = {version = "4.0.17", features = ["derive"]}
 dialoguer = {version = "0.10.2", default-features = false}
 figment = {version = "0.10.8", default-features = false, features = ["toml"]}
