--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ license = "MIT"
 name = "env-select"
 version = "0.1.0"
 
+[[bin]]
+name = "es"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = {version = "1.0.65", features = ["backtrace"]}
 atty = "0.2.14"
