Add logging and basic varset logic

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,2 +1,10 @@
-[variables]
+[vars]
 TEST_VARIABLE = ["abc", "def"]
+
+[[varsets.important]]
+VAR1 = "dev"
+VAR2 = "also dev"
+
+[[varsets.important]]
+VAR1 = "prd"
+VAR2 = "also prd"
