--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,7 @@ anyhow = {version = "1.0.65", features = ["backtrace"]}
 atty = "0.2.14"
 clap = {version = "4.0.17", features = ["derive"]}
 dialoguer = {version = "0.10.2", default-features = false}
+env_logger = "0.9.1"
+log = "0.4.17"
 serde = {version = "1.0.145", default-features = false, features = ["derive"]}
 toml = {version = "0.5.9", default-features = false}
