--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,10 +1,6 @@
 [vars]
 TEST_VARIABLE = ["abc", "def"]
 
-[[varsets.important]]
-VAR1 = "dev"
-VAR2 = "also dev"
-
-[[varsets.important]]
-VAR1 = "prd"
-VAR2 = "also prd"
+[apps.server]
+dev = {VAR1 = "dev", VAR2 = "also dev"}
+prd = {VAR1 = "prd", VAR2 = "also prd"}
