--- a/.env-select.toml
+++ b/.env-select.toml
@@ -4,3 +4,5 @@ TEST_VARIABLE = ["abc", "def"]
 [apps.server]
 dev = {VAR1 = "dev", VAR2 = "also dev"}
 prd = {VAR1 = "prd", VAR2 = "also prd"}
+
+[apps.empty]
