--- a/.env-select.toml
+++ b/.env-select.toml
@@ -2,7 +2,7 @@
 TEST_VARIABLE = ["abc", "def"]
 
 [apps.server]
-dev = {VAR1 = "dev", VAR2 = "also dev"}
-prd = {VAR1 = "prd", VAR2 = "also prd"}
+dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
+prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
 
 [apps.empty]
