--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,9 @@ jobs:
           - build: macos
             os: macos-latest
             target: x86_64-apple-darwin
+          - build: macos
+            os: macos-latest
+            target: aarch64-apple-darwin
           - build: win-msvc
             os: windows-2019
             target: x86_64-pc-windows-msvc
