Add lazily evaluated commands

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,5 +1,5 @@
 [vars]
-TEST_VARIABLE = ["abc", "def"]
+TEST_VARIABLE = ["abc", {command = "echo def"}]
 
 [apps.server]
 dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
