--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,7 +121,7 @@ jobs:
 
       - name: Strip release binary (linux and macos)
         if: matrix.build == 'linux' || matrix.build == 'macos'
-        run: strip "target/release/es"
+        run: strip "target/release/env-select"
 
       - name: Build archive
         shell: bash
@@ -132,11 +132,11 @@ jobs:
           cp {README.md,LICENSE} "$staging/"
 
           if [ "${{ matrix.os }}" = "windows-2019" ]; then
-            cp target/release/es.exe "$staging"
+            cp target/release/env-select.exe "$staging"
             7z a "$staging.zip" "$staging"
             echo "ASSET=$staging.zip" >> $GITHUB_ENV
           else
-            cp target/release/es "$staging"
+            cp target/release/env-select "$staging"
             tar czf "$staging.tar.gz" "$staging"
             echo "ASSET=$staging.tar.gz" >> $GITHUB_ENV
           fi
