--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,25 +25,6 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  cargo-publish:
-    name: cargo-publish
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Cache Rust files
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.rustup
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
-
-      - name: Publish to crates.io
-        run: cargo publish --token ${{ secrets.CRATESIO_TOKEN }}
-
   create-release:
     name: create-release
     runs-on: ubuntu-latest
@@ -150,3 +131,24 @@ jobs:
           asset_path: ${{ env.ASSET }}
           asset_name: ${{ env.ASSET }}
           asset_content_type: application/octet-stream
+
+  cargo-publish:
+    name: cargo-publish
+    runs-on: ubuntu-latest
+    needs:
+      - build-release # Don't publish until we know the build worked
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Cache Rust files
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+
+      - name: Publish to crates.io
+        run: cargo publish --token ${{ secrets.CRATESIO_TOKEN }}
