Add `sensitive` option to commands

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,4 +1,5 @@
 [vars]
+PASSWORD = ["hunter2", {command = "echo secret_password | base64", sensitive = true}]
 TEST_VARIABLE = ["abc", {command = "echo def"}]
 
 [apps.server]
