Add simple integration tests

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -7,3 +7,8 @@ dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
 prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
 
 [apps.empty]
+
+# TODO move into tests/ directory
+[apps.integration-tests.p1]
+PROFILE_VARIABLE_1 = "abc"
+PROFILE_VARIABLE_2 = "def"
