--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,11 @@ serde = {version = "1.0.145", default-features = false, features = ["derive"]}
 termcolor = "1.2.0"
 toml = {version = "0.7.5", features = ["preserve_order"]}
 
+[dev-dependencies]
+assert_cmd = {version = "2.0.11", default-features = false, features = ["color-auto"]}
+rstest = {version = "0.17.0", default-features = false}
+rstest_reuse = "0.5.0"
+
 [package.metadata.release]
 # https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
 allow-branch = ["master"] 
