--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ toml = {version = "0.7.5", features = ["preserve_order"]}
 assert_cmd = {version = "2.0.11", default-features = false, features = ["color-auto"]}
 rstest = {version = "0.17.0", default-features = false}
 rstest_reuse = "0.5.0"
+serde_test = "1.0.165"
 
 [package.metadata.release]
 # https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
