Support native commands
- Renamed existing `command` type to `shell`
- Added new native command value source under key `command`
- Added serialization to tests as well

The new value source accepts an array of strings, and expects it to be at least length 1. The first element will be the program to execute, subsequent elements will be the arguments.

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,6 +1,6 @@
 [vars]
-PASSWORD = ["hunter2", {command = "echo secret_password | base64", sensitive = true}]
-TEST_VARIABLE = ["abc", {command = "echo def"}]
+PASSWORD = ["hunter2", {shell = "echo secret_password | base64", sensitive = true}]
+TEST_VARIABLE = ["abc", {command = ["echo", "def"]}]
 
 [apps.server]
 dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
