--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,6 +1,6 @@
 [vars]
-PASSWORD = ["hunter2", {shell = "echo secret_password | base64", sensitive = true}]
-TEST_VARIABLE = ["abc", {command = ["echo", "def"]}]
+PASSWORD = ["hunter2", {type = "shell", command = "echo secret_password | base64", sensitive = true}]
+TEST_VARIABLE = ["abc", {type = "command", command = ["echo", "def"]}]
 
 [apps.server]
 dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
