[#25] Add `run` subcommand for one-off env usage
I also made the variable/application command arg required. Previously it was optional, but not passing it would spit out an error with a suggestion. The suggestion was nice, but I think it made the usage string confusing. In the future we can change it back to optional and offer an additional TUI to select var/application (before the value/profile selection).

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -12,3 +12,5 @@ prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
 [apps.integration-tests.p1]
 PROFILE_VARIABLE_1 = "abc"
 PROFILE_VARIABLE_2 = "def"
+PROFILE_VARIABLE_3 = {type = "command", command = ["echo", "ghi"]}
+PROFILE_VARIABLE_4 = {type = "shell", command = "echo jkl | cat -"}
