Delete concept of single variables
The goal is to simplify configuration, because it's about to get more complicated.

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,7 +1,3 @@
-[vars]
-PASSWORD = ["hunter2", {type = "shell", command = "echo secret_password | base64", sensitive = true}]
-TEST_VARIABLE = ["abc", {type = "command", command = ["echo", "def"]}]
-
 [apps.server]
 dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
 prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
@@ -10,7 +6,7 @@ prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
 
 # TODO move into tests/ directory
 [apps.integration-tests.p1]
-PROFILE_VARIABLE_1 = "abc"
-PROFILE_VARIABLE_2 = "def"
-PROFILE_VARIABLE_3 = {type = "command", command = ["echo", "ghi"]}
-PROFILE_VARIABLE_4 = {type = "shell", command = "echo jkl | cat -"}
+VARIABLE1 = "abc"
+VARIABLE2 = "def"
+VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
+VARIABLE4 = {type = "shell", command = "echo jkl | cat -"}
