--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,11 +1,11 @@
-[apps.server]
+[applications.server]
 dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
 prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
 
-[apps.empty]
+[applications.empty]
 
 # TODO move into tests/ directory
-[apps.integration-tests.p1]
+[applications.integration-tests.p1]
 VARIABLE1 = "abc"
 VARIABLE2 = "def"
 VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
