Unflatten applications.*.profiles.*.variables

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,11 +1,12 @@
-[applications.server.profiles]
-dev = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
-prd = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
+[applications.server.profiles.dev]
+variables = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
+[applications.server.profiles.prd]
+variables = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
 
 [applications.empty]
 
 # TODO move into tests/ directory
-[applications.integration-tests.profiles.p1]
+[applications.integration-tests.profiles.p1.variables]
 VARIABLE1 = "abc"
 VARIABLE2 = "def"
 VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
