Implement profile inheritance

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,9 +1,11 @@
+[applications.server.profiles.base]
+variables = {PROTOCOL = "https"}
 [applications.server.profiles.dev]
+extends = ["base"]
 variables = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
 [applications.server.profiles.prd]
+extends = ["base"]
 variables = {SERVICE1 = "prd", SERVICE2 = "also-prd"}
-
-[applications.empty]
 
 # TODO move into tests/ directory
 [applications.integration-tests.profiles.p1.variables]
