--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ atty = "0.2.14"
 clap = {version = "4.0.17", features = ["derive"]}
 ctrlc = "3.2.3"
 dialoguer = {version = "0.10.2", default-features = false}
+dotenv-parser = {version = "0.1.3", default-features = false}
 env_logger = {version = "0.9.1", default-features = false, features = ["atty", "termcolor"]}
 indexmap = {version = "2.0.0", features = ["serde"]}
 log = "0.4.17"
