Add file value source to integration tests

--- a/tests/.env-select.toml
+++ b/tests/.env-select.toml
@@ -3,3 +3,4 @@ VARIABLE1 = "abc"
 VARIABLE2 = "def"
 VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
 VARIABLE4 = {type = "shell", command = "echo jkl | cat -"}
+file = {type = "file", path = "vars.env", multiple = true}
