Add side effects
Also refactor code for executing commands and whatnot

--- a/tests/.env-select.toml
+++ b/tests/.env-select.toml
@@ -1,6 +1,16 @@
-[applications.integration-tests.profiles.p1.variables]
-VARIABLE1 = "abc"
-VARIABLE2 = "def"
-VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
-VARIABLE4 = {type = "shell", command = "echo jkl | cat -"}
-file = {type = "file", path = "vars.env", multiple = true}
+[applications.integration-tests.profiles.p1]
+# These *shouldn't* have access to env vars
+pre_export = [
+  {setup = "echo pre setup 1 $VARIABLE1", teardown = "echo pre teardown 1 $VARIABLE1"},
+  {setup = "echo pre setup 2 $VARIABLE1", teardown = "echo pre teardown 2 $VARIABLE1"},
+]
+# These *should* have access to env vars
+post_export = [
+  {setup = "echo post setup 1 $VARIABLE1", teardown = "echo post teardown 1 $VARIABLE1"},
+  {setup = "echo post setup 2 $VARIABLE1", teardown = "echo post teardown 2 $VARIABLE1"},
+]
+variables.VARIABLE1 = "abc"
+variables.VARIABLE2 = "def"
+variables.VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
+variables.VARIABLE4 = {type = "shell", command = "echo jkl | cat -"}
+variables.file = {type = "file", path = "vars.env", multiple = true}
