--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = {version = "1.0.65", features = ["backtrace"]}
 atty = "0.2.14"
 clap = {version = "4.0.17", features = ["derive"]}
 ctrlc = "3.2.3"
+derive_more = "0.99.17"
 dialoguer = {version = "0.10.2", default-features = false}
 dotenv-parser = {version = "0.1.3", default-features = false}
 env_logger = {version = "0.9.1", default-features = false, features = ["atty", "termcolor"]}
