Remove native commands from value sources and side effects
Over-complicated. Not needed. The whole thing is shell oriented anyway.

--- a/tests/.env-select.toml
+++ b/tests/.env-select.toml
@@ -11,6 +11,5 @@ post_export = [
 ]
 variables.VARIABLE1 = "abc"
 variables.VARIABLE2 = "def"
-variables.VARIABLE3 = {type = "command", command = ["echo", "ghi"]}
-variables.VARIABLE4 = {type = "shell", command = "echo jkl | cat -"}
+variables.VARIABLE3 = {type = "command", command = "echo ghi | cat -"}
 variables.file = {type = "file", path = "vars.env", multiple = true}
