--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,33 @@ rstest = {version = "^0.18.2", default-features = false}
 rstest_reuse = "^0.6.0"
 serde_test = "^1.0.165"
 
-[package.metadata.release]
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.6.0"
+# CI backends to support
+ci = ["github"]
+# The installers to generate for each app
+installers = ["homebrew"]
+# Publish jobs to run in CI
+pr-run-mode = "plan"
+# Publish jobs to run in CI
+publish-jobs = ["homebrew", "homebrew"]
+# A GitHub repo to push Homebrew formulas to
+tap = "LucasPickering/homebrew-tap"
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
+
+[workspace.metadata.release]
 # https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
 allow-branch = ["master"] 
+pre-release-replacements = [
+  {file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}"},
+  {file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
+] 
 publish = false # CI will handle this
-tag-message = "v{{version}}"
