--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,13 +1,10 @@
-[applications.server.profiles.base]
-variables = {PROTOCOL = "https"}
 
-[applications.server.profiles.dev]
-extends = ["base"]
-variables = {SERVICE1 = "dev", SERVICE2 = "also-dev"}
+[applications.server.profiles.base1]
+pre_export = [{setup = "echo base1 setup", teardown = "echo base1 teardown"}]
 
-[applications.server.profiles.prd]
-extends = ["base"]
-[applications.server.profiles.prd.variables]
-SERVICE1 = "prd"
-SERVICE2 = "also-prd"
-SERVICE3 = {type = "file", path = "creds.env", multiple = true}
+[applications.server.profiles.base2]
+pre_export = [{setup = "echo base2 setup", teardown = "echo base2 teardown"}]
+
+[applications.server.profiles.child]
+extends = ["base1", "base2"]
+pre_export = [{setup = "echo child setup", teardown = "echo child teardown"}]
