--- a/tests/.env-select.toml
+++ b/tests/.env-select.toml
@@ -12,4 +12,4 @@ post_export = [
 variables.VARIABLE1 = "abc"
 variables.VARIABLE2 = "def"
 variables.VARIABLE3 = {type = "command", command = "echo ghi | cat -"}
-variables.file = {type = "file", path = "vars.env", multiple = true}
+variables.file = {type = "file", path = "vars.env", multiple = ["FILE_VARIABLE1"]}
