Resolve value sources concurrently
I added `smol` as a minimal async runtime. It only needs to be used in a few places so I didn't bother wrapping the whole program in it. This brought the binary size from 1.4MiB up to 1.6MiB, so not bad.

Closes #61

--- a/.env-select.toml
+++ b/.env-select.toml
@@ -1,10 +1,12 @@
+[applications.server.profiles.base]
+pre_export = [{setup = "echo setup", teardown = "echo teardown"}]
 
-[applications.server.profiles.base1]
-pre_export = [{setup = "echo base1 setup", teardown = "echo base1 teardown"}]
+[applications.server.profiles.dev]
+extends = ["base"]
+variables.SERVICE1 = "dev"
+variables.SERVICE2 = "also-dev"
 
-[applications.server.profiles.base2]
-pre_export = [{setup = "echo base2 setup", teardown = "echo base2 teardown"}]
-
-[applications.server.profiles.child]
-extends = ["base1", "base2"]
-pre_export = [{setup = "echo child setup", teardown = "echo child teardown"}]
+[applications.server.profiles.prd]
+extends = ["base"]
+variables.SERVICE1 = "prd"
+variables.SERVICE2 = "also-prd"
